# NextCraftTalk-EXT

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.txt  LICENSE  NEXTCLOUD_AIO_INTEGRATION.md  SECURITY.md  architecture  cache_manager.py  db_explorer.py  deploy-and-setup.sh  deploy.sh  deployment_guide.md  docker-compose.yml  docker-compose.yml.bak  docker_compose.yml  env_example.sh  explore_db.sh  maintenance.sh  maintenance_script.sh  nextcloud_bot.py  prompt_template.txt  pyproject.toml  quick_reference.md  rag_pipeline.py  readme.md  readme.md.backup  recipe_cache.db  requirements.py  requirements.txt  setup.sh  test_cache.db  test_suite.py  vector_db.py  vector_db_setup.py  wiki_scraper.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml
backups/pre_deploy_20251016_214041/: docker-compose.yml
backups/pre_deploy_20251017_215231/: docker-compose.yml
backups/pre_deploy_20251018_130623/: docker-compose.yml
chroma_db/: chroma.sqlite3
chroma_db/7d389e24-96b9-48d9-a676-843de083aebc/: index_metadata.pickle
docker/: Dockerfile  docker-compose.yml
docs/: GIT_WORKFLOW.md  RELEASE_PROCESS.md  deployment_guide.md  quick_reference.md
scripts/: deploy-enhanced.sh  deployment.sh  maintenance.sh
src/: __init__.py
src/bot/: __main__.py  api.py  message.py  nextcloud_api.py  security.py
src/core/: config.py
src/data/: vector_db.py  wiki_scraper.py
src/rag/: pipeline.py
src/xai/: pipeline.py
test_chroma_db/: chroma.sqlite3
wiki_data/: wiki_docs_chunks.json  wiki_docs_full.json
wiki_data_backup_20251013_232315/: wiki_docs_chunks.json  wiki_docs_full.json
